
edge

* Move gems to vendor/gems and update Capistrano to 2.5.5 and Net::SSH to 2.0.11

* Update Rails to 2.2.2

* Add support to lookup configuration parameters in the definition of configuration parameters:
  set :foo, "123"
  set :bar, "a #{foo} here"
  
  Only works for configuration parameter (build-in like release_path or your own). DOES NOT EXECUTE CODE  

* Add Hash type to variables. Provided by sergio@entrecables.com #103

* Add locking. A running deployment locks the stage, so that no other deployment ca be run. Overridable by checkbox.

* Update Net::SSH to 2.0.10 and Capistrano to 2.5.4

* Add Thin template for Rails. Provided by Richard Piacentini

1.4

* Added CAS-auth support. Provided by Tim Shadel.

* Auto-scroll deployment log

* Ability to cancel running deployments. Refactor deployment status.

* Show recent deployments on the project page

* A deployment comment is no longer required, it is optional from now on

* Track deployed revisions

* Rename 'www' role to 'web' to match Capistrano, #91 by sergio@entrecables.com

* Support array values for configuration paramters, #93 by paradise

* Update Capistrano to 2.5.0

* Update to Rails 2.1.1

* Allow to clone a project. Stages and configuration is cloned for now. Closes #85

* Add Recipe versioning with version_fu. Provided by Mathias Meyer

* Add /projects/1/stages/1/deployments/latest. Provided by Mathias Meyer

* Fix XML output of stage tasks. Provided by Mathias Meyer

* Add version info XML action. Provided by Mathias Meyer

* Update Net::SSH to 1.1.3

1.3

* Add support for mod_rails / Phusion Passenger. Use mod_rails as project type.

* Ability to disable host per deloy. This way host that are down do not block a deployment

* Check syntax of recipes. Provided by Mathias Meyer

* Ajax-Preview on recipe edit. Provided by Mathias Meyer

* Update Capistrano to 2.2.0 and Net::SFTP to 1.1.1

* Better handling of `repeat` task by also repeating the description
