@@ -9,8 +9,9 @@
   <table class="sortable">
     <tr>
       <th width="1%">Login</th>
-      <th width="97%">Email</th>
+      <th width="96%">Email</th>
       <th width="1%">Admin</th>
+      <th width="1%">Disabled</th>
       <th width="1%">Created At</th>
     </tr>
     <% for user in @users %>
@@ -18,6 +19,11 @@
         <td nowrap><%= link_to h(user.login), user_path(user) %></td>
         <td><%=h user.email %></td>
         <td><%=h user.admin? ? 'Admin' : '' %></td>
+        <td>
+          <% if user.disabled? %>
+            <span style="color:red">disabled</span>
+          <% end %>
+        </td>
         <td><%=h user.created_at.to_s(:date_with_day) %></td>
         <% if current_user.admin? || current_user == user -%>
           <td><%= link_to 'Edit', edit_user_path(user) %></td>
