@@ -31,8 +31,12 @@
 			</p>
 			<br/>
 			<% if current_user.admin? || current_user == @user %>
-			 <%= link_to 'Edit & change password', edit_user_path(@user), :class => 'arrow_link' %> | 
-			 <%= link_to 'Delete', user_path(@user), :confirm => 'Are you sure?', :method => :delete, :class => 'arrow_link'  %>
+			  <%= link_to 'Edit & change password', edit_user_path(@user), :class => 'arrow_link' %> | 
+			  <% if @user.disabled? %>
+			    <%= link_to 'Enable', enable_user_path(@user), :confirm => 'Are you sure?', :method => :post, :class => 'arrow_link'  %>
+			  <% else %>
+			    <%= link_to 'Disable', user_path(@user), :confirm => 'Are you sure? Disabled users can no longer login.', :method => :delete, :class => 'arrow_link'  %>
+			  <% end %>
 			<% end %>
   </div>
   <div class="box_bottom"></div>
