@@ -9,7 +9,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20090223081938) do
+ActiveRecord::Schema.define(:version => 20090319185505) do
 
   create_table "configuration_parameters", :force => true do |t|
     t.string   "name"
@@ -119,6 +119,9 @@ ActiveRecord::Schema.define(:version => 20090223081938) do
     t.datetime "remember_token_expires_at"
     t.integer  "admin",                                   :default => 0
     t.string   "time_zone",                               :default => "UTC"
+    t.datetime "disabled"
   end
+
+  add_index "users", ["disabled"], :name => "index_users_on_disabled"
 
 end
